<package format="2">
    <name>nclt_utilities</name>
    <version>0.1.0</version>
    <description>Utilities for working with the NCLT dataset.</description>
    <maintainer email="gregjm@umich.edu">Gregory Meyer</maintainer>
    <license>BSD 3-Clause License</license>

    <url type="repository">https://github.com/umigv/nclt_utilities</url>
    <author>Gregory Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>

	<depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <exec_depend>rosbag</exec_depend>
	<exec_depend>rospy</exec_depend>
</package>
